--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,24 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title>Flex - {{ page.title }}</title>
-      <meta name="viewport" content="width=device-width">
 
-      <!-- syntax highlighting CSS -->
-      <link rel="stylesheet" href="/assets/css/syntax.css">
+    {% include head.html %}
 
-      <!-- Custom CSS -->
-      <link rel="stylesheet" href="/assets/css/main.css">
-
-      <!-- Responsive CSS -->
-      <link rel="stylesheet" href="/assets/css/responsive.css">
-
-      <!-- Google Fonts -->
-      <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
-      <link href='http://fonts.googleapis.com/css?family=Raleway:300,400,700' rel='stylesheet' type='text/css'>
-  </head>
   <body>
     <div class="site">
       <div class="sidebar" id="sidebar">
@@ -41,8 +25,8 @@
         <div class="footer">
           <span id="footer-links">
             <a href="" class="footer-link">About</a> <span class="separator">&bull;</span>
-            <a href="" class="footer-link">Twitter</a> <span class="separator">&bull;</span>
-            <a href="" class="footer-link">GitHub</a>
+            <a href="{{ site.xing_home }}" target="_blank">Xing</a> <span class="separator">&bull;</span>
+            <a href="{{ site.github_home }}" target="_blank">GitHub</a>
           </span>
         </div>
       </div>
